--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -40,12 +40,6 @@ main {
   flex: 1;
 }
 
-main,
-header,
-nav {
-  margin-inline: auto;
-}
-
 blockquote {
   border-radius: var(--radius-1);
 }
